Wasted too much time on loading animations and fixing Home buttons

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -24,7 +24,7 @@
 
     @include respond(desktop) {
       top: 44rem;
-      left: 25%;
+      left: 28%;
       right: revert;
     }
   }
