--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -57,35 +57,43 @@
     flex-direction: row;
     gap: $size-lg;
   }
+}
 
-  a {
-    font-size: 1.8rem;
-    font-weight: bold;
-    // padding: $size-sm $size-lg;
-    border-radius: $size-xs;
-    height: 5.8rem;
-    width: 22rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
+// .button,
+.contactButton,
+.projectsButton {
+  font-size: 1.8rem;
+  font-weight: bold;
+  // padding: $size-sm $size-lg;
+  border-radius: $size-xs;
+  height: 5.8rem;
+  width: 22rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
+  transition: all 300ms ease;
 
-    svg {
-      margin-left: $size-xs;
-    }
+  svg {
+    margin-left: $size-xs;
   }
 
-  .contact {
-    background-color: $color-red;
+  &:hover {
+    transform: scale(1.03);
+    // box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.2);
   }
+}
 
-  .projects {
-    color: $color-blue;
-    background-color: $color-white;
+.contactButton {
+  background-color: $color-red;
+}
 
-    svg {
-      height: 3rem;
-    }
+.projectsButton {
+  color: $color-blue;
+  background-color: $color-white;
+
+  svg {
+    height: 3rem;
   }
 }
 
